--- a/css/about-me.css
+++ b/css/about-me.css
@@ -1,7 +1,7 @@
 .version.about_me /* version checker */
 {
-	color: #0000E1;
-	background-color: #F0684B;
+	color: #00001A;
+	background-color: #27E68F;
 }
 
 #muse_css_mq
@@ -22,12 +22,6 @@
 	margin-right: auto;
 }
 
-#page_position_content
-{
-	margin-bottom: -12px;
-	width: 0.01px;/* should not cover content below */
-}
-
 #u3090
 {
 	z-index: 2;
@@ -38,7 +32,7 @@
 
 #u3237-6
 {
-	z-index: 52;
+	z-index: 58;
 	width: 308px;
 	min-height: 83px;
 	margin-left: 270px;
@@ -55,7 +49,7 @@
 
 #u3111
 {
-	width: 139px;
+	width: 119px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
@@ -63,28 +57,28 @@
 
 #u3112
 {
-	width: 139px;
+	width: 119px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112:hover
 {
-	width: 139px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3112:active
 {
-	width: 139px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3114-4
 {
-	width: 139px;
+	width: 119px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -96,7 +90,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 139px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -105,50 +99,43 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 139px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3118
 {
-	width: 139px;
+	width: 119px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 141px;
+	left: 121px;
 }
 
 #u3119
 {
-	width: 139px;
+	width: 119px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112.MuseMenuActive,#u3119:hover
 {
-	width: 139px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3119:active
 {
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3119.MuseMenuActive
-{
-	width: 139px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3122-4
 {
-	width: 139px;
+	width: 119px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -160,7 +147,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 139px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -169,64 +156,55 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3119.MuseMenuActive #u3122-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u4801
 {
-	width: 140px;
+	width: 119px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 282px;
+	left: 242px;
 }
 
 #u4802
 {
-	width: 140px;
+	width: 119px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u4802:hover
+#u3119.MuseMenuActive,#u4802:hover
 {
-	width: 140px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u4802:active
 {
-	width: 140px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u4804-4
 {
-	width: 140px;
+	width: 119px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u4802:hover #u4804-4
+#u3119.MuseMenuActive #u3122-4,#u4802:hover #u4804-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -235,43 +213,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3155
 {
-	width: 140px;
+	width: 119px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 424px;
+	left: 363px;
 }
 
 #u3156
 {
-	width: 140px;
+	width: 119px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u4802.MuseMenuActive,#u3156:hover
 {
-	width: 140px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3156:active
 {
-	width: 140px;
+	width: 119px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3156.MuseMenuActive
+{
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3158-4
 {
-	width: 140px;
+	width: 119px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -283,7 +268,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -292,55 +277,121 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3176
+#u3156.MuseMenuActive #u3158-4
 {
-	width: 140px;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 119px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u4991
+{
+	width: 120px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 566px;
+	left: 484px;
 }
 
-#u3177
+#u4992
 {
-	width: 140px;
+	width: 120px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u3156.MuseMenuActive,#u3177:hover
+#u4992:hover
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u3177:active
+#u4992:active
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u3178-4
+#u4995-4
 {
-	width: 140px;
+	width: 120px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
+#u4992:hover #u4995-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u4992:active #u4995-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 120px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3176
+{
+	width: 120px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 606px;
+}
+
+#u3177
+{
+	width: 120px;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u4992.MuseMenuActive,#u3177:hover
+{
+	width: 120px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3177:active
+{
+	width: 120px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3178-4
+{
+	width: 120px;
+	min-height: 17px;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+#u4992.MuseMenuActive #u4995-4,#u3177:hover #u3178-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -349,50 +400,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3197
 {
-	width: 140px;
+	width: 120px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 708px;
+	left: 728px;
 }
 
 #u3198
 {
-	width: 140px;
+	width: 120px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3177.MuseMenuActive,#u3198:hover
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3198:active
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3198.MuseMenuActive
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3200-4
 {
-	width: 140px;
+	width: 120px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -404,7 +455,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -413,7 +464,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -422,7 +473,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -449,7 +500,7 @@
 
 #u3389
 {
-	z-index: 85;
+	z-index: 91;
 	width: 369px;
 	height: 19px;
 	border-style: solid;
@@ -464,7 +515,7 @@
 
 #u3395-6
 {
-	z-index: 91;
+	z-index: 97;
 	width: 351px;
 	min-height: 21px;
 	background-color: transparent;
@@ -492,7 +543,7 @@
 
 #u2040
 {
-	z-index: 82;
+	z-index: 88;
 	width: 20px;
 	height: 20px;
 	background-color: #FFFFFF;
@@ -507,7 +558,7 @@
 
 #u1291
 {
-	z-index: 83;
+	z-index: 89;
 	width: 237px;
 	border-color: #7F7F7F;
 	background-color: #FFFFFF;
@@ -519,7 +570,7 @@
 
 #u1292
 {
-	z-index: 84;
+	z-index: 90;
 	width: 225px;
 	height: 218px;
 	border-radius: 160px;
@@ -547,7 +598,7 @@
 
 #u3391
 {
-	z-index: 87;
+	z-index: 93;
 	width: 369px;
 	height: 19px;
 	border-style: solid;
@@ -562,7 +613,7 @@
 
 #u3396-6
 {
-	z-index: 97;
+	z-index: 103;
 	width: 351px;
 	min-height: 21px;
 	background-color: transparent;
@@ -584,7 +635,7 @@
 
 #u3390
 {
-	z-index: 86;
+	z-index: 92;
 	width: 369px;
 	height: 19px;
 	border-style: solid;
@@ -599,7 +650,7 @@
 
 #u3397-6
 {
-	z-index: 103;
+	z-index: 109;
 	width: 351px;
 	min-height: 21px;
 	background-color: transparent;
@@ -621,7 +672,7 @@
 
 #u3392
 {
-	z-index: 88;
+	z-index: 94;
 	width: 369px;
 	height: 19px;
 	border-style: solid;
@@ -636,7 +687,7 @@
 
 #u3398-6
 {
-	z-index: 109;
+	z-index: 115;
 	width: 350px;
 	min-height: 21px;
 	background-color: transparent;
@@ -651,7 +702,7 @@
 
 #u3393
 {
-	z-index: 89;
+	z-index: 95;
 	width: 369px;
 	height: 19px;
 	border-style: solid;
@@ -666,7 +717,7 @@
 
 #u3399-7
 {
-	z-index: 115;
+	z-index: 121;
 	width: 350px;
 	min-height: 21px;
 	background-color: transparent;
@@ -692,7 +743,7 @@
 
 #u3394
 {
-	z-index: 90;
+	z-index: 96;
 	width: 369px;
 	height: 19px;
 	border-style: solid;
@@ -707,7 +758,7 @@
 
 #u3400-6
 {
-	z-index: 122;
+	z-index: 128;
 	width: 350px;
 	min-height: 21px;
 	background-color: transparent;
@@ -737,7 +788,7 @@
 
 #u1290-17
 {
-	z-index: 65;
+	z-index: 71;
 	width: 782px;
 	min-height: 270px;
 	background-color: transparent;
@@ -791,7 +842,7 @@
 
 #u4273-4
 {
-	z-index: 43;
+	z-index: 49;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 15px;
@@ -800,18 +851,18 @@
 
 #u3222-5
 {
-	z-index: 47;
+	z-index: 53;
 	width: 114px;
 	min-height: 19px;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 80px;
-	left: 946px;
+	left: 948px;
 }
 
 #u4300
 {
-	z-index: 128;
+	z-index: 134;
 	width: 782px;
 	min-height: 863px;
 	border-width: 0px;
@@ -822,17 +873,23 @@
 	position: relative;
 }
 
+#page_position_content,#pu3093
+{
+	width: 0.01px;/* should not cover content below */
+}
+
 #u3093
 {
 	z-index: 3;
 	width: 942px;
-	padding-bottom: 34px;
+	padding-bottom: 29px;
 	position: relative;
+	margin-right: -10000px;
 }
 
 #u3252-6
 {
-	z-index: 58;
+	z-index: 64;
 	width: 782px;
 	min-height: 19px;
 	position: relative;
@@ -852,13 +909,13 @@
 
 #u4305
 {
-	z-index: 64;
+	z-index: 70;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 23px;
-	left: 893px;
+	margin-top: 12px;
+	left: 953px;
 }
 
 .html
