--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 .version.contact /* version checker */
 {
-	color: #000013;
-	background-color: #254305;
+	color: #000014;
+	background-color: #E17B16;
 }
 
 #muse_css_mq
@@ -13,33 +13,35 @@
 {
 	z-index: 1;
 	width: 942px;
-	min-height: 760.9935560460997px;
+	min-height: 761px;
 	background-image: none;
 	border-width: 0px;
 	border-color: #000000;
 	background-color: #333333;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-#page_position_content
+#pu3090
 {
-	margin-bottom: -12px;
-	width: 0.01px;/* should not cover content below */
+	width: 0.01px;
+	padding-bottom: 0px;
+	margin-right: -10000px;
+	margin-left: -50px;
 }
 
 #u3090
 {
 	z-index: 2;
 	width: 848px;
+	margin-left: 50px;
 	position: relative;
 	padding: 17px 47px 11.049999999999983px;
 }
 
 #u3237-6
 {
-	z-index: 52;
+	z-index: 58;
 	width: 308px;
 	min-height: 83px;
 	margin-left: 270px;
@@ -56,7 +58,7 @@
 
 #u3111
 {
-	width: 139px;
+	width: 119px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
@@ -64,28 +66,28 @@
 
 #u3112
 {
-	width: 139px;
+	width: 119px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112:hover
 {
-	width: 139px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3112:active
 {
-	width: 139px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3114-4
 {
-	width: 139px;
+	width: 119px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -97,7 +99,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 139px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -106,50 +108,43 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 139px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3118
 {
-	width: 139px;
+	width: 119px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 141px;
+	left: 121px;
 }
 
 #u3119
 {
-	width: 139px;
+	width: 119px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112.MuseMenuActive,#u3119:hover
 {
-	width: 139px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3119:active
 {
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3119.MuseMenuActive
-{
-	width: 139px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3122-4
 {
-	width: 139px;
+	width: 119px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -161,7 +156,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 139px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -170,64 +165,55 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3119.MuseMenuActive #u3122-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u4801
 {
-	width: 140px;
+	width: 119px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 282px;
+	left: 242px;
 }
 
 #u4802
 {
-	width: 140px;
+	width: 119px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u4802:hover
+#u3119.MuseMenuActive,#u4802:hover
 {
-	width: 140px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u4802:active
 {
-	width: 140px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u4804-4
 {
-	width: 140px;
+	width: 119px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u4802:hover #u4804-4
+#u3119.MuseMenuActive #u3122-4,#u4802:hover #u4804-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -236,43 +222,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3155
 {
-	width: 140px;
+	width: 119px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 424px;
+	left: 363px;
 }
 
 #u3156
 {
-	width: 140px;
+	width: 119px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u4802.MuseMenuActive,#u3156:hover
 {
-	width: 140px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3156:active
 {
-	width: 140px;
+	width: 119px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3156.MuseMenuActive
+{
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3158-4
 {
-	width: 140px;
+	width: 119px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -284,7 +277,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -293,55 +286,121 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3176
+#u3156.MuseMenuActive #u3158-4
 {
-	width: 140px;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 119px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u4991
+{
+	width: 120px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 566px;
+	left: 484px;
 }
 
-#u3177
+#u4992
 {
-	width: 140px;
+	width: 120px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u3156.MuseMenuActive,#u3177:hover
+#u4992:hover
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u3177:active
+#u4992:active
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u3178-4
+#u4995-4
 {
-	width: 140px;
+	width: 120px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
+#u4992:hover #u4995-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u4992:active #u4995-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 120px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3176
+{
+	width: 120px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 606px;
+}
+
+#u3177
+{
+	width: 120px;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u4992.MuseMenuActive,#u3177:hover
+{
+	width: 120px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3177:active
+{
+	width: 120px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3178-4
+{
+	width: 120px;
+	min-height: 17px;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+#u4992.MuseMenuActive #u4995-4,#u3177:hover #u3178-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -350,50 +409,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3197
 {
-	width: 140px;
+	width: 120px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 708px;
+	left: 728px;
 }
 
 #u3198
 {
-	width: 140px;
+	width: 120px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3177.MuseMenuActive,#u3198:hover
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3198:active
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3198.MuseMenuActive
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3200-4
 {
-	width: 140px;
+	width: 120px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -405,7 +464,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -414,7 +473,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -423,14 +482,13 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #ppu1223-5
 {
 	width: 0.01px;
-	margin-left: -50px;
 }
 
 #pu1223-5
@@ -444,7 +502,7 @@
 
 #u1223-5
 {
-	z-index: 66;
+	z-index: 72;
 	width: 782px;
 	min-height: 56px;
 	background-color: transparent;
@@ -462,7 +520,7 @@
 
 #u1221
 {
-	z-index: 65;
+	z-index: 71;
 	width: 764px;
 	min-height: 503px;
 	border-width: 0px;
@@ -492,37 +550,47 @@
 	left: 50px;
 }
 
+#pu4273-4
+{
+	width: 0.01px;
+	margin-right: -10000px;
+	margin-top: 167px;
+	margin-left: 942px;
+}
+
 #u4273-4
 {
-	z-index: 43;
+	z-index: 49;
+	margin-bottom: -8px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 15px;
-	left: 991px;
+	margin-top: -1px;
+	left: -1px;
 }
 
 #u3222-5
 {
-	z-index: 47;
+	z-index: 53;
 	width: 114px;
 	min-height: 19px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 80px;
-	left: 946px;
+	margin-top: 64px;
+	left: -44px;
 }
 
 #u3093
 {
 	z-index: 3;
 	width: 942px;
-	padding-bottom: 34px;
+	padding-bottom: 29px;
 	position: relative;
+	margin-right: -10000px;
 }
 
 #u3252-6
 {
-	z-index: 58;
+	z-index: 64;
 	width: 782px;
 	min-height: 19px;
 	position: relative;
@@ -542,13 +610,13 @@
 
 #u4305
 {
-	z-index: 64;
+	z-index: 70;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 23px;
-	left: 893px;
+	margin-top: 12px;
+	left: 953px;
 }
 
 .html
@@ -560,5 +628,10 @@ body
 {
 	position: relative;
 	min-width: 942px;
+}
+
+.verticalspacer
+{
+	min-height: 1px;
 }
 
