--- a/css/donate.css
+++ b/css/donate.css
@@ -1,7 +1,7 @@
 .version.donate /* version checker */
 {
-	color: #00000C;
-	background-color: #3017F8;
+	color: #0000F5;
+	background-color: #5CC749;
 }
 
 #muse_css_mq
@@ -22,23 +22,25 @@
 	margin-right: auto;
 }
 
-#page_position_content
+#pu3090
 {
-	margin-bottom: -12px;
-	width: 0.01px;/* should not cover content below */
+	width: 0.01px;
+	margin-right: -10000px;
+	margin-left: -50px;
 }
 
 #u3090
 {
 	z-index: 2;
 	width: 848px;
+	margin-left: 50px;
 	position: relative;
 	padding: 17px 47px 11.049999999999983px;
 }
 
 #u3237-6
 {
-	z-index: 52;
+	z-index: 58;
 	width: 308px;
 	min-height: 83px;
 	margin-left: 270px;
@@ -55,7 +57,7 @@
 
 #u3111
 {
-	width: 139px;
+	width: 119px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
@@ -63,28 +65,28 @@
 
 #u3112
 {
-	width: 139px;
+	width: 119px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112:hover
 {
-	width: 139px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3112:active
 {
-	width: 139px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3114-4
 {
-	width: 139px;
+	width: 119px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -96,7 +98,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 139px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -105,50 +107,43 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 139px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3118
 {
-	width: 139px;
+	width: 119px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 141px;
+	left: 121px;
 }
 
 #u3119
 {
-	width: 139px;
+	width: 119px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112.MuseMenuActive,#u3119:hover
 {
-	width: 139px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3119:active
 {
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3119.MuseMenuActive
-{
-	width: 139px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3122-4
 {
-	width: 139px;
+	width: 119px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -160,7 +155,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 139px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -169,64 +164,55 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3119.MuseMenuActive #u3122-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u4801
 {
-	width: 140px;
+	width: 119px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 282px;
+	left: 242px;
 }
 
 #u4802
 {
-	width: 140px;
+	width: 119px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u4802:hover
+#u3119.MuseMenuActive,#u4802:hover
 {
-	width: 140px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u4802:active
 {
-	width: 140px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u4804-4
 {
-	width: 140px;
+	width: 119px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u4802:hover #u4804-4
+#u3119.MuseMenuActive #u3122-4,#u4802:hover #u4804-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -235,43 +221,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3155
 {
-	width: 140px;
+	width: 119px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 424px;
+	left: 363px;
 }
 
 #u3156
 {
-	width: 140px;
+	width: 119px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u4802.MuseMenuActive,#u3156:hover
 {
-	width: 140px;
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3156:active
 {
-	width: 140px;
+	width: 119px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3156.MuseMenuActive
+{
+	width: 119px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3158-4
 {
-	width: 140px;
+	width: 119px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -283,7 +276,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -292,55 +285,121 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 119px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3176
+#u3156.MuseMenuActive #u3158-4
 {
-	width: 140px;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 119px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u4991
+{
+	width: 120px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 566px;
+	left: 484px;
 }
 
-#u3177
+#u4992
 {
-	width: 140px;
+	width: 120px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u3156.MuseMenuActive,#u3177:hover
+#u4992:hover
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u3177:active
+#u4992:active
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u3178-4
+#u4995-4
 {
-	width: 140px;
+	width: 120px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
+#u4992:hover #u4995-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u4992:active #u4995-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 120px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3176
+{
+	width: 120px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 606px;
+}
+
+#u3177
+{
+	width: 120px;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u4992.MuseMenuActive,#u3177:hover
+{
+	width: 120px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3177:active
+{
+	width: 120px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3178-4
+{
+	width: 120px;
+	min-height: 17px;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+#u4992.MuseMenuActive #u4995-4,#u3177:hover #u3178-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -349,50 +408,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3197
 {
-	width: 140px;
+	width: 120px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 708px;
+	left: 728px;
 }
 
 #u3198
 {
-	width: 140px;
+	width: 120px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3177.MuseMenuActive,#u3198:hover
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3198:active
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3198.MuseMenuActive
 {
-	width: 140px;
+	width: 120px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3200-4
 {
-	width: 140px;
+	width: 120px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -404,7 +463,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -413,7 +472,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -422,14 +481,13 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 140px;
+	width: 120px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #ppu1225-23
 {
 	width: 0.01px;
-	margin-left: -50px;
 }
 
 #pu1225-23
@@ -442,7 +500,7 @@
 
 #u1225-23
 {
-	z-index: 65;
+	z-index: 71;
 	width: 782px;
 	min-height: 323px;
 	background-color: transparent;
@@ -472,7 +530,7 @@
 
 #u1235
 {
-	z-index: 88;
+	z-index: 94;
 	width: 118px;
 	min-height: 33px;
 	border-width: 0px;
@@ -504,38 +562,47 @@
 	left: 50px;
 }
 
+#pu4273-4
+{
+	width: 0.01px;
+	margin-right: -10000px;
+	margin-top: 167px;
+	margin-left: 942px;
+}
+
 #u4273-4
 {
-	z-index: 43;
+	z-index: 49;
+	margin-bottom: -8px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 15px;
-	left: 991px;
+	margin-top: -1px;
+	left: -1px;
 }
 
 #u3222-5
 {
-	z-index: 47;
+	z-index: 53;
 	width: 114px;
 	min-height: 19px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 80px;
-	left: 946px;
+	margin-top: 64px;
+	left: -44px;
 }
 
 #u3093
 {
 	z-index: 3;
 	width: 942px;
-	padding-bottom: 34px;
-	margin-top: 73px;
+	padding-bottom: 29px;
 	position: relative;
+	margin-right: -10000px;
 }
 
 #u3252-6
 {
-	z-index: 58;
+	z-index: 64;
 	width: 782px;
 	min-height: 19px;
 	position: relative;
@@ -555,13 +622,13 @@
 
 #u4305
 {
-	z-index: 64;
+	z-index: 70;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 23px;
-	left: 893px;
+	margin-top: 12px;
+	left: 953px;
 }
 
 .html
@@ -573,5 +640,10 @@ body
 {
 	position: relative;
 	min-width: 942px;
+}
+
+.verticalspacer
+{
+	min-height: 17px;
 }
 
